# orchestrator

./: .flake8  .gitignore  .readthedocs.yaml  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  BACKWARD_COMPATIBILITY.md  CLAUDE_SKILLS_REFACTOR_COMPLETE.md  CLAUDE_SKILLS_REFACTOR_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  CONTRIBUTING.md  CONTROL_FLOW_FIXES_SUMMARY.md  EPIC_263_COMPLETION_REPORT.md  FIXES_SUMMARY.md  FRAMEWORK_REDESIGN_PLAN.md  FRAMEWORK_TRANSFORMATION_COMPLETE.md  HANDOFF_NOTES.md  IMPLEMENTATION_STATUS.md  ISSUE_187_IMPLEMENTATION_PLAN.md  ISSUE_189_IMPLEMENTATION_SUMMARY.md  ISSUE_193_IMPLEMENTATION_SUMMARY.md  ISSUE_194_IMPLEMENTATION_SUMMARY.md  ISSUE_203_COMPLETE_IMPLEMENTATION.md  ISSUE_205_COMPLETION_REPORT.md  LANGGRAPH_MIGRATION_SUMMARY.md  MANIFEST.in  NESTED_LOOPS_ALTERNATIVES.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  REFACTOR_INTEGRATION_POINTS.md  TECHNICAL_DESIGN_CLAUDE_SKILLS_REFACTOR.md  TECHNICAL_DESIGN_CLAUDE_SKILLS_REFACTOR_V2.md  add_file_output_support.py  analyze_template_rendering.py  auto_fix_tests.py  check_issue202_status.py  check_template_manager.py  checkpoint_improvements_issue.md  checkpoint_report.md  checkpoint_report.yaml  code_snippets_extracted.csv  (+250 more)
.ccpm_backup/: .claude_20250824_225455.json  .claude_20250904_053201.json  .claude_20250904_054840.json  .claude_20250904_084226.json
.claude/: settings.local.json
batch_output/: summary.md
cache/: index.json
config/: .flake8  .readthedocs.yaml  maintenance_config.json  mcp_tools_config.json  models.yaml  monitoring_config.json  orchestrator.yaml  reporting_config.json  validation_config.json
data/: file1.txt  file2.txt  file3.txt  sample.txt
deep_agents_poc/: README.md  benchmark_results.json  requirements.txt  setup_poc.py
deployment/: blue_green_deployment.py  production_deployment.py  rollback_procedures.py  security_hardening.py
docs/: CLAUDE_SKILLS_USER_GUIDE.md  ISSUE_153_IMPLEMENTATION_COMPLETE.md  ISSUE_153_TECHNICAL_ANALYSIS.md  Makefile  QUICK_START.md  README_CLAUDE_SKILLS.md  TEMPLATE_DEPENDENCY_MIGRATION_GUIDE.md  api_reference.md  conf.py  declarative_framework_guide.md  directory_structure_standards.md  error_handling.md  example_validation_report.md  faq.md  framework_documentation.html  framework_documentation.md  index.rst  issue_243_validation_report.md  issue_252_testing_validation_report.md  issue_8_final_report.md  loop_variables.md  model_task_reference.md  pipeline_validation_results.md  routellm_integration.md  template_rendering_fix.md  tool_definition_guide.md  troubleshooting.md  update_models.md  yaml_usage_guide.md
docs_sphinx/: conf.py  installation.rst  quickstart.rst  requirements.txt  tool_reference.rst  yaml_pipelines.rst
example_outputs/: control_flow_conditional_output.json  improved_documentation_output.md
examples/: .real_models_available  PRODUCTION_TEST_SUMMARY.md  README.md  TESTING_REPORT.md  TEST_REPORT.md  analysis_simple.yaml  auto_tags_demo.yaml  autodebugger_demo.yaml  automated_testing_system.yaml  chatbot_with_save.yaml  code_analysis_suite.yaml  code_optimization.yaml  compatibility_test.py  comprehensive_test.py  content_creation_pipeline.yaml  content_simple.yaml  control_flow_advanced.yaml  control_flow_advanced_fast.yaml  control_flow_conditional.yaml  control_flow_dynamic.yaml  control_flow_for_loop.yaml  control_flow_while_loop.yaml  creative_image_pipeline.yaml  creative_simple.yaml  creative_writing_assistant.yaml  customer_support_automation.yaml  data_processing.yaml  data_processing_pipeline.yaml  data_processing_workflow.yaml  data_simple.yaml  debug_auto.py  document_intelligence.yaml  enhanced_research_pipeline.yaml  enhanced_until_conditions_demo.yaml  error_handling_examples.yaml  fact_checker.yaml  file_inclusion_demo.yaml  financial_analysis_bot.yaml  interactive_chat_bot.yaml  interactive_chat_bot_demo.yaml  (+93 more)
htmlcov_ambiguity/: z_18dce30a8ba1cb02___init__.py,cover  z_18dce30a8ba1cb02_orchestrator.py,cover  z_5e72f9289c150ab4___init__.py,cover  z_5e72f9289c150ab4_model_registry.py,cover  z_75bdec4195f6fa4d___init__.py,cover  z_75bdec4195f6fa4d_adaptive_checkpoint.py,cover  z_75bdec4195f6fa4d_backends.py,cover  z_75bdec4195f6fa4d_simple_state_manager.py,cover  z_75bdec4195f6fa4d_state_manager.py,cover  z_77611d76e70b3164___init__.py,cover  z_77611d76e70b3164_ambiguity_resolver.py,cover  z_77611d76e70b3164_schema_validator.py,cover  z_77611d76e70b3164_yaml_compiler.py,cover  z_b4d9b8779eefa78d___init__.py,cover  z_b4d9b8779eefa78d_langgraph_adapter.py,cover  z_b4d9b8779eefa78d_mcp_adapter.py,cover  z_b8c4212f6b35f6f1___init__.py,cover  z_b8c4212f6b35f6f1_anthropic_model.py,cover  z_b8c4212f6b35f6f1_google_model.py,cover  z_b8c4212f6b35f6f1_huggingface_model.py,cover  z_b8c4212f6b35f6f1_openai_model.py,cover  z_de0db33daa127c84___init__.py,cover  z_de0db33daa127c84_cache.py,cover  z_de0db33daa127c84_control_system.py,cover  z_de0db33daa127c84_error_handler.py,cover  z_de0db33daa127c84_model.py,cover  z_de0db33daa127c84_pipeline.py,cover  z_de0db33daa127c84_resource_allocator.py,cover  z_de0db33daa127c84_task.py,cover  z_e2fec404d9f9dbeb_parallel_executor.py,cover  z_e2fec404d9f9dbeb_sandboxed_executor.py,cover
notebooks/: 01_getting_started.ipynb  02_yaml_configuration.ipynb  03_advanced_model_integration.ipynb  README.md
notes/: 2025-01-18_example_cleanup_summary.md  2025-07-18_debugging_session.md  2025-07-18_environment_setup.md  2025-07-18_implementation_progress.md  2025-07-18_mock_removal_session.md  2025-07-18_session_summary.md  control_flow_issues.md  current_test_status.md  design_compliance_achievement.md  example_quality_report.md  failing_tests_tracker.csv  github_actions_fixes_2025_07_23.md  implementation_roadmap.md  issue_159_implementation_plan.md  issue_159_template_rendering_analysis.md  issue_169_final_status.md  issue_169_problems.md  issue_169_status.md  issue_184_control_flow_update.md  issue_184_while_loop_findings.md  issue_184_while_loop_status.md  issue_235_debug_removal_notes.md  issue_235_debug_removal_tracker.csv  issue_36_analysis.md  (+21 more)
(+2491 files in other folders)
