[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-orc"
version = "0.1.0"
description = "AI pipeline orchestration framework with intelligent ambiguity resolution"
authors = [
    {name = "Contextual Dynamics Lab", email = "contextualdynamics@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "asyncio-mqtt>=0.13.0",
    "jinja2>=3.0.0",
    "jsonschema>=4.0.0",
    "numpy>=1.21.0",
    "docker>=6.0.0",
    "redis>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "cryptography>=3.4.0",
    "networkx>=3.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    # LangChain for structured outputs
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.2.0",
    # Web search and browser automation
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "playwright>=1.40.0",
    "ddgs>=9.0.0",
    "httpx>=0.25.0",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
    # CLI
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    # Multimodal tools
    "pillow>=10.0.0",
    # Audio processing
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "SpeechRecognition>=3.10.0",
    "pydub>=0.25.1",
    # Video processing (opencv-python already installed separately)
    "moviepy>=1.0.3",
    "imageio-ffmpeg>=0.4.9",
    # Additional dependencies
    "six>=1.16.0",
    # Google AI for generative models
    "google-generativeai>=0.3.0",
    # Data visualization 
    "seaborn>=0.11.0",
    "matplotlib>=3.5.0",
    # RouteLLM for intelligent model routing and cost optimization
    "routellm[serve,eval]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "pandas>=1.5.0",  # Used in data processing tests
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autoapi>=2.0.0",
    "myst-parser>=0.18.0",
    "nbsphinx>=0.8.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]
all = [
    "orchestrator[dev,docs,notebooks]",
]

[project.urls]
Homepage = "https://www.context-lab.com/"
Repository = "https://github.com/ContextLab/orchestrator"
Documentation = "https://orc.readthedocs.io"
Changelog = "https://github.com/ContextLab/orchestrator/blob/main/CHANGELOG.md"
Organization = "https://www.context-lab.com/"

[project.scripts]
py-orc = "orchestrator.cli:main"
orchestrator = "orchestrator.cli:main"
orchestrator-install-configs = "orchestrator.install_configs:install_default_configs"
py-orc-test = "orchestrator.test_runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orchestrator = ["py.typed", "*.yaml", "*.yml", "*.json"]
"*" = ["../../config/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/orchestrator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Test timeout configuration
timeout = 300
timeout_method = "thread"

# Exclude local tests from CI (Ollama tests require local setup)
markers = [
    "local: marks tests as local-only (not run in CI)",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "docker: marks tests that require docker",
    "redis: marks tests that require redis",
    "postgres: marks tests that require postgres",
    "timeout: marks tests with custom timeout",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "redis.*",
    "psycopg2.*",
    "openai.*",
    "anthropic.*",
]
ignore_missing_imports = true


[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]